# wikis

./: README.md  pyproject.toml
.github/workflows/: check_version.yml  create_tag.yml  publish_to_pypi.yml
wikis/: admin.py  apps.py  forms.py  models.py  views.py
