[build-system]
requires = ["setuptools", "wheel"]  # 指定构建工具

[project]
name = "django-wikis"
version = "0.1.0"
description = ""  # 项目描述，如果有的话
readme = "README.md"  # 项目的 README 文件，如果有的话
authors = [  # 项目的作者信息，如果有的话
    {name = "Author Name", email = "author@example.com"},
]
license = {file = "LICENSE"}  # 项目许可证文件，如果有的话
dependencies = [
    "Django>=3.0"
]

[classifiers]
Framework = "Django"
Programming_Language = "Python :: 3"
License = "OSI Approved :: MIT License"
